# TeslaOnTarget

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  config.py.template  docker-compose.yml  docker-entrypoint.sh  docker-run.sh  init-repo.sh  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  setup.py  teslaontarget.sh
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  docker-publish.yml  release-please.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  AUTHENTICATION.md  CONFIGURATION.md  DOCKER.md  DOCKER_QUICKSTART.md  DOCKER_REGISTRY.md  README.md  ROADMAP.md  TESTING_CHECKLIST.md  TROUBLESHOOTING.md  tesla_api_reference.md
scripts/: mutation_check.py
teslaontarget/: __init__.py  __main__.py  auth.py  cli.py  config_handler.py  constants.py  cot.py  health.py  tak_client.py  tesla_api.py  utils.py  vehicle_mapper.py
tests/: conftest.py  test_auth.py  test_cli.py  test_config_handler.py  test_cot.py  test_health.py  test_tak_client.py  test_tesla_api.py  test_tls.py  test_utils.py  test_vehicle_mapper.py
tools/: README.md  analyze_full_captures.py  analyze_tesla_api.py  decode_navigation.py  find_fsd_fields.py  replay_captures.py
tools/exploration/: check_latest_navigation.py  check_navigation_fields.py  discover_tesla_fields.py
